# KnowYourWitter

./: README.md  setup.cfg
know_your_witter/apiaccess/: access_server.py  api.py  config.py  environment.env
know_your_witter/commandline/: command_line_access.py
know_your_witter/tests/: test_api.py
know_your_witter/typer/: guess.py
know_your_witter/ui/: background_task.py  window_handler.py
