[metadata]
# replace with your username:
name = know-your-witter-Napermial
version = 0.0.1
author = Napermial
description = an API consumer MBTI type guesser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Norphet/KnowYourWitter
project_urls =
    Bug Tracker = https://github.com/Norphet/KnowYourWitter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6